# asr-decoders

./: .gitignore  README.md  README_cn.md  build.sh
example/: eesen_decode_test.py  flashlight_decode_test.py  rmai_decode_test.py
src/eesen/: decodable_matrix.hpp  faster_decoder_wrapper.cpp  faster_decoder_wrapper.hpp  pybind_wrapper.cpp
src/flashlight/: lexicon_decoder_wrapper.cpp  lexicon_decoder_wrapper.hpp  pybind_wrapper.cpp
src/flashlight/common/: String.cpp  String.h  System.cpp  System.h
src/rmai/: base_decoder.cpp  base_decoder.hpp  decoder_arks.hpp  decoder_utils.cpp  decoder_utils.hpp  greedy_search_decoder.cpp  greedy_search_decoder.hpp  lexicon_transducer.cpp  lexicon_transducer.hpp  lexicon_trie.cpp  lexicon_trie.hpp  prefix_beam_search_decoder.cpp  prefix_beam_search_decoder.hpp  pybind_wrapper.cpp
tools/: compile_decoding_graph.sh  compile_tlg_graph.sh  install_openblas.sh  kaldi_itf.py
unit_test/faster_decoder/: decode_eesen_backend.sh  demo.py  test.ark
unit_test/flashlight_lexicon_decoder/: demo.py
unit_test/greedy_search/: CMakeLists.txt  demo.cpp  demo.py
unit_test/lexicon_transducer/: CMakeLists.txt  demo.cpp
unit_test/lexicon_trie/: CMakeLists.txt  demo.cpp
unit_test/prefix_beam_search_decoder/: CMakeLists.txt  demo.cpp  demo.py
unit_test/prefix_beam_search_lexicon_decoder/: CMakeLists.txt  demo.cpp  demo.py  greedy_decode.py  make_lexiconp.py  mat.txt  phones.txt
unit_test/prune_table/: CMakeLists.txt  demo.cpp
unit_test/unit_table/: demo.cpp
unit_test_data/: chars.txt  lexiconp.txt  phones.txt
(+15 files in other folders)
